Prevent nav bar from intersecting footer on small screen heights

--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -4,9 +4,9 @@
 
 .nav {
   padding: 0 3rem;
+  border-right: 1px solid var(--color-gray-light);
   grid-area: nav;
   align-self: start;
-  border-right: 1px solid var(--color-gray-light);
 
   position: sticky;
   top: 2rem;
@@ -132,5 +132,12 @@
     height: 0.4rem;
     border-radius: 10px;
     background-color: var(--color-secondary);
+  }
+}
+
+/* Prevent nav from overlapping footer when viewport height is small */
+@media only screen and (min-width: 769px) and (max-height: 520px) {
+  .nav {
+    margin-bottom: 14rem;
   }
 }
